# s100py

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  README.rst  environment.yml  hdf5_2_geotiff.py  pyproject.toml  rtd_environment.yml  s111_converter.py  setup.py
.github/workflows/: s100py-publish.yaml  s100py-tests.yaml  s100py-tests.yml
conda_recipe/: meta.yaml
docs/: advanced_example_api_usage.rst  conf.py  example_api.rst  extending_the_api.rst  for_api_developers.rst  index.rst  make_docs.bat  more_sample_api.rst  old_versions.rst  s100.rst  s102.rst  s104.rst  s111.rst  sample_api.rst  using_example_api.rst  using_sample_api.rst  using_the_api.rst
docs/s102/: old.rst  s102_api.rst  s102_readme.rst  s102_utils.rst
docs/s104/: old.rst  s104_api.rst  s104_readme.rst  s104_utils.rst
docs/s111/: old.rst  s111_api.rst  s111_readme.rst  s111_utils.rst
docs/templates/: s100theme.css
s100/: __init__.py  regulargrid.py  s111.py
s100/model/: fvcom.py  model.py  pom.py  roms.py
s100ofs/: s111.py
s100ofs/model/: __init__.py  roms.py
s100py/: .readthedocs.yml  __init__.py  bag_to_s102.py  model_to_s111.py  s100.py  s102.py  s102_test.py  s111.py  s1xx.py
s100py/docs/: activate_pydro.bat  automodsumm.py  automodsumm_0.12_revised.py  compile_html.bat  conf.py  extending_the_api.rst  for_api_developers.rst  generate_rst.bat  index.rst  inheritance_diagram.py  make_docs.bat  (+13 more)
scripts/: grid_index_and_coefficients.py  s111_add_irregular_grid.py  s111_compliant_regular_grid.py  s111_create_file.py  s111_create_hdf5.py  s111_regular_grid.py
(+497 files in other folders)
